[gd_scene load_steps=3 format=3 uid="uid://bl3abmyaxvalx"]

[ext_resource type="Script" path="res://unique_scripts/Popups.gd" id="1_g0ejj"]
[ext_resource type="StyleBox" uid="uid://cdxgk1orsm6q3" path="res://Themes/Tooltipstyle.tres" id="2_56iah"]

[node name="Popups" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0ejj")

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="ToolPopup" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
offset_right = 222.0
offset_bottom = 130.0
theme_override_styles/panel = ExtResource("2_56iah")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ToolPopup"]
layout_mode = 2

[node name="Name" type="Label" parent="UI/ToolPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Chocolate Coins"

[node name="Cost" type="Label" parent="UI/ToolPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost"

[node name="Desc" type="Label" parent="UI/ToolPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Effect"

[node name="BuildPopup" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
offset_right = 222.0
offset_bottom = 130.0
theme_override_styles/panel = ExtResource("2_56iah")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BuildPopup"]
layout_mode = 2

[node name="Build" type="Label" parent="UI/BuildPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Chocolate Coins"

[node name="Cost1" type="Label" parent="UI/BuildPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost"

[node name="Cost10" type="Label" parent="UI/BuildPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Income" type="Label" parent="UI/BuildPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Descr" type="Label" parent="UI/BuildPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Effect"
